--- a/linkedin-scheduler-extension/popup.html
+++ b/linkedin-scheduler-extension/popup.html
@@ -63,11 +63,27 @@
           <div id="selectedUsersList" class="selected-users-list"></div>
           <div id="selectionStatus" class="status"></div>
         </div>
+        <!-- Bulk Upload Users from Excel -->
+        <div class="bulk-upload-section" style="margin-bottom: 12px;">
+          <button id="uploadExcelBtn" class="btn">Upload Excel</button>
+          <input type="file" id="excelFileInput" accept=".xls,.xlsx,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" style="display:none;" />
+          <div id="excelUploadStatus" class="status"></div>
+        </div>
+        <!-- Manual Add User Form -->
+        <form id="manualAddUserForm" class="input-group" style="margin-top: 16px; display: none;">
+          <input type="text" id="manualUserName" placeholder="Name" class="input" required />
+          <input type="text" id="manualUserTitle" placeholder="Title" class="input" required />
+          <input type="url" id="manualUserProfileUrl" placeholder="LinkedIn Profile Link" class="input" required />
+          <textarea id="manualUserPostContent" placeholder="Post Content (optional)" class="input" rows="2"></textarea>
+          <button type="submit" class="btn primary" style="margin-top: 8px;">Add User Manually</button>
+          <div id="manualAddUserStatus" class="status"></div>
+        </form>
       </div>
 
       <div id="engagementList" class="engagement-list"></div>
     </div>
   </div>
+  <script src="xlsx.full.min.js"></script>
   <script src="popup.js"></script>
 </body>
 </html> 
